--- a/ex-one/index.html
+++ b/ex-one/index.html
@@ -1,1 +1,62 @@
 <!-- Finding Inputs and Appending Text -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Exercise 1</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <style>
+      body {
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+          sans-serif;
+      }
+      div {
+        margin-bottom: 10px;
+      }
+      input[type="radio"] {
+        margin-right: 5px;
+      }
+      span {
+        font-weight: bold;
+      }
+      button {
+        background-color: #007bff;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        cursor: pointer;
+        border-radius: 5px;
+      }
+      button:hover {
+        background-color: #0056b3;
+      }
+    </style>
+  </head>
+  <body>
+    <div>
+      <input type="radio" name="color" value="Red" />
+      <span>Red</span>
+    </div>
+    <div>
+      <input type="radio" value="Cold Fusion" />
+      <span>Sky</span>
+    </div>
+    <div>
+      <input type="radio" name="accept" value="Evil Plans" />
+      <span>Sea</span>
+    </div>
+    <button id="button1">Click to see the effect</button>
+
+    <script>
+      $(document).ready(function () {
+        $("#button1").click(function () {
+          $('input[type="radio"]:not([name="color"])')
+            .next("span")
+            .text('This input does not have the name "color"');
+        });
+      });
+    </script>
+  </body>
+</html>
