--- a/index.html
+++ b/index.html
@@ -3,26 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Animated Timeline</title>
-    <link rel="stylesheet" href="styles/main.css" />
-    <link
-      rel="stylesheet"
-      href="styles/responsive.css"
-      media="(max-width: 768px)"
-    />
+    <title>Animated Timeline</title>
+    <link rel="stylesheet" href="/styles/main.css" />
   </head>
   <body>
-    <div id="timeline-container">
-      <h1>My Timeline</h1>
-      <ul class="timeline-events">
-        <li class="timeline-event">
-          <span class="event-date">2000</span>
-          <span class="event-title">Born</span>
-          <p class="event-description">...</p>
-        </li>
-      </ul>
+    <div id="timeline">
+      <div class="event" data-year="2000">Event 1</div>
+      <div class="event" data-year="2005">Event 2</div>
+      <div class="event" data-year="2010">Event 3</div>
+      <!-- Add more events as needed -->
     </div>
-    <script src="scripts/vendors/jquery-3.6.0.min.js"></script>
-    <script src="scripts/main.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="/scripts/main.js"></script>
   </body>
 </html>
